--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </nav>
 
     <header class="hero">
-      <span class="badge">Postdoctoral Research Fellow · Nuclear Medicine & AI</span>
-      <h1>Machine learning for PET reconstruction, analysis, and clinical translation.</h1>
-      <p>Researcher at The University of Queensland working across dynamic PET modelling, non‑invasive AIF estimation, PET image reconstruction (GANs), and clinical evaluation of deep‑learning MRI. Building agentic AI for imaging (Agent‑MIRA; Agent SPI‑WSI).</p>
+      <span class="badge">Postdoctoral Research Fellow · Nuclear Medicine & Agentic AI</span>
+      <h1>Molecular Imaging Integration with OMICS using Agentic AI.</h1>
+      <p>PhD Thesis- Machine learning for PET reconstruction and analysis</p>
       <div class="cta">
         <a class="btn primary" href="#publications">Selected Publications</a>
         <a class="btn" href="#experience">Experience</a>
@@ -62,7 +62,7 @@
       <div class="grid">
         <div class="card">
           <h3>Research Interests</h3>
-          <p>Diagnostic imaging & machine learning · Nuclear medicine · Digital health · Dynamic PET compartmental modelling · Parametric PET · PET/MRI harmonisation · Clinical AI evaluation.</p>
+          <p>Diagnostic imaging & machine learning · Nuclear medicine · Digital health · Parametric PET · PET/MRI harmonisation · Clinical AI evaluation.</p>
         </div>
         <div class="card">
           <h3>Highlights</h3>
@@ -72,18 +72,6 @@
           <h3>Grants & Mentoring</h3>
           <p>Co‑investigator: Cost‑effective portable low‑field MSK MRI for high‑performance sport (AU$1.3M; 2025–2028). Supervision: 1 PhD + Honours, 1 Undergraduate.</p>
         </div>
-      </div>
-    </section>
-
-    <section id="quickstart">
-      <div class="section-title">Quick Start</div>
-      <div class="card">
-        <ol>
-          <li>Create a new public repo named <strong>USERNAME.github.io</strong> (replace <em>USERNAME</em> with your GitHub username).</li>
-          <li>Add this <span class="kbd">index.html</span> to the repo root and commit.</li>
-          <li>Visit <strong>https://USERNAME.github.io</strong> after a minute. That’s it.</li>
-        </ol>
-        <p>Prefer a project site instead of a user site? Use any repo name and enable Pages from <em>Settings → Pages</em>, selecting the <em>main</em> branch as the source.</p>
       </div>
     </section>
 
@@ -132,11 +120,11 @@
       <div class="grid">
         <div class="card">
           <h3>Agent‑MIRA</h3>
-          <p>AI‑orchestrated medical imaging agent for PET image retrieval and assistance (under IP consideration with UniQuest; to appear in CMIG 2025).</p>
+          <p>AI‑orchestrated medical imaging agent for PET image retrieval and assistance.</p>
         </div>
         <div class="card">
           <h3>Agent SPI‑WSI</h3>
-          <p>Spatially‑grounded pathway identification on whole‑slide histology using LLMs (accepted at IEEE/ICCVW 2025).</p>
+          <p>Spatially‑grounded pathway identification on whole‑slide histology using LLMs.</p>
         </div>
       </div>
     </section>
