--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dr Rajat Vashistha — Research & Innovation</title>
+  <title>Rajat Vashistha, PhD</title>
   <meta name="description" content="A clean, fast starter for a GitHub Pages personal or project website." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,9 +48,9 @@
     </nav>
 
     <header class="hero">
-      <span class="badge">Postdoctoral Research Fellow · Nuclear Medicine & Agentic AI</span>
-      <h1>Molecular Imaging Integration with OMICS using Agentic AI.</h1>
-      <p>PhD Thesis- Machine learning for PET reconstruction and analysis</p>
+      <span class="badge"> Medical Images· Nuclear Medicine· Agentic AI</span>
+      <h1>Postdoctoral Research Fellow at Surgical Oncology Group.</h1>
+      <p>Frazer Institute, The University of Queensland</p>
       <div class="cta">
         <a class="btn primary" href="#publications">Selected Publications</a>
         <a class="btn" href="#experience">Experience</a>
@@ -142,7 +142,7 @@
           <li><em>Short 18F‑FDG imaging window triple injection protocol for parametric PET</em>. EJNMMI Research, 2024.</li>
           <li><em>Omni‑channel healthcare supply chains resiliency using machine learning</em>. Journal of Business Research, 2023.</li>
         </ul>
-        <p class="muted">Full list on Google Scholar.</p>
+        <p class="muted">Full list on Google Scholar: https://scholar.google.com/citations?user=nLDiAiIAAAAJ&hl=en.</p>
       </div>
     </section>
 
@@ -182,7 +182,7 @@
     </section>
 
     <footer class="footer">
-      <div>© <span id="y">2025</span> Your Name. Built with ♥ and GitHub Pages.</div>
+      <div>© <span id="y">2025</span> Rajat Vashistha.</div>
     </footer>
   </div>
 
